[package]
name = "echo-proto"
version = "0.1.0"
authors = ["notryanb"]

[[bin]]
name = "echo-server"
path = "src/echo-server.rs"

[[bin]]
name = "futures"
path = "src/futures-ex-1.rs"

[dependencies]
bytes = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"