[package]
name = "echo-proto"
version = "0.1.0"
authors = ["notryanb"]

[[bin]]
name = "echo-server"
path = "src/echo-server.rs"

[[bin]]
name = "futures"
path = "src/futures-ex-1.rs"

[[bin]]
name = "db"
path = "src/proto-db.rs"

[dependencies]
bytes = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"

rand = "0.3"
r2d2 = "0.7"
r2d2_postgres ="0.11"

serde = "1.0"
serde_derive ="1.0"
serde_json = "1.0"
